# MemGateQA

./: .dev.vars.example  .env.example  .gitignore  .mcp.json  Dockerfile  EVIDENCE.md  LICENSE  PROBE_RESULTS.md  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  start.bat  start.ps1  tailwind.config.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml
audit/: PRODUCT_AUDIT.md
audit/full-ui-pass/: QA_NOTES.md
data/probes/: run-run1-fix.jsonl  run-run1.jsonl
docs/: API.md  ARCHITECTURE.md  BLOG.md  BRING_YOUR_OWN_CASE.md  COGNEE_API_ALIGNMENT.md  COGNEE_INTEGRATION.md  CURSOR_PROMPT.md  DEMO_SCRIPT.md  EVIDENCE.md  HACKATHON_BLOG.txt  HACKATHON_PLAN.md  IMPLEMENTATION_CHECKLIST.md  JUDGING_STRATEGY.md  PRD.md
results/: scorecard.json
scripts/: analyze-css.mjs  build-submission.ps1  extract_oc_chars.py  find-missing-css.mjs  generate_evidence.py  smoke_test.py  write_operator_css.py
server/: agent_builder.py  agent_loop.py  agent_publish.py  agent_templates.py  audit_pipeline.py  auto_agent.py  autonomous_gate.py  cognee_bridge.py  cognee_client.py  config.py  developer_manifest.py  dummy_rich.py  evidence_ingest.py  grading.py  llm_providers.py  log_scrub.py  loop_runner.py  loop_store.py  mcp_memgateqa.py  memgate_cli.py  memgate_memory.py  mock_cognee.py  model_tiers.py  probe.py  prompt_safety.py  rate_limit.py  requirements.txt  seed.py  storage.py  supermemory_adapter.py  webhooks.py  wolfpack_repair.py  workspace_settings.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+234 files in other folders)
